# notes-cli

./: Cargo.toml  db.sqlite3
migrations/mg_1/: down.sql  up.sql
src/: lib.rs  main.rs
