[package]
name = "notes-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.19", features = ["derive"] }
inquire = "0.5.2"
strum = { version = "0.24", features = ["derive"] }
viuer = "0.6.2"
crossterm = "0.25.0"
sqlx = { version = "0.6.2", features = [  "runtime-async-std-native-tls", "sqlite" ] }
async-std = { version = "1", features = [ "attributes" ] }
